--- a/src/pages/program/index.astro
+++ b/src/pages/program/index.astro
@@ -20,7 +20,7 @@ const getUsersForTurno = (day: string, turno: string) => {
 };
 
 const days = [
-  // "lunes",
+  "lunes",
   "martes",
   "miercoles",
   "jueves",
@@ -317,7 +317,7 @@ let weekDates = getWeekDates(weekOffset);
 <script>
   let currentDate = new Date();
   const days = [
-    //"lunes",
+    "lunes",
     "martes",
     "miercoles",
     "jueves",
