after pdf adding style and color

--- a/src/pages/program/index.astro
+++ b/src/pages/program/index.astro
@@ -86,10 +86,24 @@ let weekDates = getWeekDates(weekOffset);
       <div class="flex gap-2">
         <a href="/program/CalenderView"
           ><button
-            class="bg-green-500 text-white px-4 py-2 rounded"
+            class="bg-cyan-500 text-white px-4 py-2 rounded font-semibold flex"
             id="CalenderViewBtn"
           >
             Calendario
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              class="icon icon-tabler icons-tabler-outline icon-tabler-chevron-right"
+              ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
+                d="M9 6l6 6l-6 6"></path></svg
+            >
           </button></a
         >
       </div>
@@ -125,7 +139,7 @@ let weekDates = getWeekDates(weekOffset);
         <option value="guardar">Guardar Preajuste</option>
       </select>
       <button
-        class="bg-cyan-600 text-white px-4 py-2 h-full rounded"
+        class="bg-blue-700 text-white px-4 py-2 h-full rounded"
         id="saveBtn"
       >
         <svg
@@ -147,7 +161,7 @@ let weekDates = getWeekDates(weekOffset);
       </button>
 
       <a href="/user-history">
-        <button class="bg-yellow-500 text-white px-4 py-2 rounded">
+        <button class="bg-teal-600 text-white px-4 py-2 rounded">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
