--- a/src/pages/crear-congregacion.astro
+++ b/src/pages/crear-congregacion.astro
@@ -11,7 +11,7 @@ import { BackButton, Spinner } from "@/components/index";
             Crear una nueva congregación
         </h1>
 
-        <form class="bg-white p-5 rounded-lg shadow-lg w-1/2 mx-auto mt-10">
+        <form class="bg-white p-5 rounded-lg shadow-lg w-full md:w-1/2 mx-auto mt-10">
             <div class="mb-5">
                 <label
                     for="name"
